Fixes #1638: "Rules successfully uploaded" message should be updated. Submitted by vincent
git-svn-id: https://svn.clinovo.com/clincapture/trunk@2790 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/page_messages_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/page_messages_en.properties
@@ -1204,8 +1204,8 @@ OCRERR_0032= Target syntax invalid.
 OCRERR_0033= CRF is Invalid.
 OCRERR_0034= StudyEventDefinition is Invalid.
 OCRERR_0035= Expression is too long (more than 4000 characters).
-rules_Import_message1= Congratulations! Your rule import passed with no errors. Please review the rule validation results. You can save it to database by clicking "Continue".
-rules_Import_message2= Congratulations! Your rule import passed with no errors. Some existing rules or rule assignments will be updated or replaced. Please review the rule validation results. You can save it to database by clicking "Continue".
+rules_Import_message1= Congratulations! Your rule import passed with no errors. Please review the rule validation results. You can save it to database by clicking "Submit".
+rules_Import_message2= Congratulations! Your rule import passed with no errors. Some existing rules or rule assignments will be updated or replaced. Please review the rule validation results. You can save it to database by clicking "Submit".
 rules_Import_message3= Your rule import had some errors. Please review the rule validation results.
 
 you_received_this_from = <P>You received this email from the ClinCapture System because you are listed as the assigned user for this discrepancy. You will need to login to ClinCapture with your user name and password after clicking the link. If after login you receive a page cannot be displayed message, please make sure to select the Change Study/Site link in the upper right corner of the page, select the study referenced above, and try the link again.</P>
