--- a/core/src/main/resources/org/akaza/openclinica/i18n/page_messages_zh.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/page_messages_zh.properties
@@ -1939,12 +1939,12 @@ OCRERR_0034 = \u7814\u7a76\u4e8b\u4ef6\u5b9a\u4e49\u65e0\u6548\u3002
 #OCRERR_0035 =  Expression is too long (more than 4000 characters).
 #OCRERR_0035 = 表达式过长 （超过 4000 个字符）。
 OCRERR_0035 = \u8868\u8fbe\u5f0f\u8fc7\u957f \uff08\u8d85\u8fc7 \u0034\u0030\u0030\u0030 \u4e2a\u5b57\u7b26\uff09\u3002
-#rules_Import_message1 =  Congratulations! Your rule import passed with no errors. Please review the rule validation results. You can save it to database by clicking ""Continue"".
-#rules_Import_message1 = 祝贺您 ！您的规则导入通过，没有错误。请检查该规则的验证结果。您可以单击""继续""将它保存到数据库。
-rules_Import_message1 = \u795d\u8d3a\u60a8 \uff01\u60a8\u7684\u89c4\u5219\u5bfc\u5165\u901a\u8fc7\uff0c\u6ca1\u6709\u9519\u8bef\u3002\u8bf7\u68c0\u67e5\u8be5\u89c4\u5219\u7684\u9a8c\u8bc1\u7ed3\u679c\u3002\u60a8\u53ef\u4ee5\u5355\u51fb\u0022\u0022\u7ee7\u7eed\u0022\u0022\u5c06\u5b83\u4fdd\u5b58\u5230\u6570\u636e\u5e93\u3002
-#rules_Import_message2 =  Congratulations! Your rule import passed with no errors. Some existing rules or rule assignments will be updated or replaced. Please review the rule validation results. You can save it to database by clicking ""Continue""."
-#rules_Import_message2 = 祝贺您 ！您的规则导入通过，没有错误。一些现有的规则或规则的任务将更新或更换。请检查该规则的验证结果。您可以通过单击""继续""将它保存到数据库。"
-rules_Import_message2 = \u795d\u8d3a\u60a8 \uff01\u60a8\u7684\u89c4\u5219\u5bfc\u5165\u901a\u8fc7\uff0c\u6ca1\u6709\u9519\u8bef\u3002\u4e00\u4e9b\u73b0\u6709\u7684\u89c4\u5219\u6216\u89c4\u5219\u7684\u4efb\u52a1\u5c06\u66f4\u65b0\u6216\u66f4\u6362\u3002\u8bf7\u68c0\u67e5\u8be5\u89c4\u5219\u7684\u9a8c\u8bc1\u7ed3\u679c\u3002\u60a8\u53ef\u4ee5\u901a\u8fc7\u5355\u51fb\u0022\u0022\u7ee7\u7eed\u0022\u0022\u5c06\u5b83\u4fdd\u5b58\u5230\u6570\u636e\u5e93\u3002\u0022
+#rules_Import_message1 =  Congratulations! Your rule import passed with no errors. Please review the rule validation results. You can save it to database by clicking "Submit".
+#rules_Import_message1 = 祝贺您 ！您的规则导入通过，没有错误。请检查该规则的验证结果。您可以单击"提交"将它保存到数据库。
+rules_Import_message1 = \u795d\u8d3a\u60a8 \uff01\u60a8\u7684\u89c4\u5219\u5bfc\u5165\u901a\u8fc7\uff0c\u6ca1\u6709\u9519\u8bef\u3002\u8bf7\u68c0\u67e5\u8be5\u89c4\u5219\u7684\u9a8c\u8bc1\u7ed3\u679c\u3002\u60a8\u53ef\u4ee5\u5355\u51fb\u0022\u63d0\u4ea4\u0022\u5c06\u5b83\u4fdd\u5b58\u5230\u6570\u636e\u5e93\u3002
+#rules_Import_message2 =  Congratulations! Your rule import passed with no errors. Some existing rules or rule assignments will be updated or replaced. Please review the rule validation results. You can save it to database by clicking "Submit".
+#rules_Import_message2 = 祝贺您 ！您的规则导入通过，没有错误。一些现有的规则或规则的任务将更新或更换。请检查该规则的验证结果。您可以通过单击"提交"将它保存到数据库。
+rules_Import_message2 = \u795d\u8d3a\u60a8 \uff01\u60a8\u7684\u89c4\u5219\u5bfc\u5165\u901a\u8fc7\uff0c\u6ca1\u6709\u9519\u8bef\u3002\u4e00\u4e9b\u73b0\u6709\u7684\u89c4\u5219\u6216\u89c4\u5219\u7684\u4efb\u52a1\u5c06\u66f4\u65b0\u6216\u66f4\u6362\u3002\u8bf7\u68c0\u67e5\u8be5\u89c4\u5219\u7684\u9a8c\u8bc1\u7ed3\u679c\u3002\u60a8\u53ef\u4ee5\u901a\u8fc7\u5355\u51fb\u0022\u63d0\u4ea4\u0022\u5c06\u5b83\u4fdd\u5b58\u5230\u6570\u636e\u5e93\u3002
 #rules_Import_message3 =  Your rule import had some errors. Please review the rule validation results.
 #rules_Import_message3 = 您的规则导入出现错误。请检查该规则的验证结果。
 rules_Import_message3 = \u60a8\u7684\u89c4\u5219\u5bfc\u5165\u51fa\u73b0\u9519\u8bef\u3002\u8bf7\u68c0\u67e5\u8be5\u89c4\u5219\u7684\u9a8c\u8bc1\u7ed3\u679c\u3002
