Fixes #2279: Add 'Download Casebooks' button. Submitted by vitaly
git-svn-id: https://svn.clinovo.com/clincapture/trunk@2801 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
@@ -4051,3 +4051,5 @@ print_site_casebooks = Print Site Casebooks
 time_zone = Time zone
 casebooks = Casebooks
 generate_casebooks = Generate Casebooks
+generated_casebooks_for_study = Generated casebooks for
+selected_casebooks_in_progress = Selected casebooks in progress.
