--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_ru.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_ru.properties
@@ -7724,3 +7724,9 @@ casebooks = \u0418\u0420\u041a \u043e\u0442\u0447\u0435\u0442\u044b
 #generate_casebooks = Generate Casebooks
 #generate_casebooks = Сгенерировать отчеты
 generate_casebooks = \u0421\u0433\u0435\u043d\u0435\u0440\u0438\u0440\u043e\u0432\u0430\u0442\u044c \u043e\u0442\u0447\u0435\u0442\u044b
+#generated_casebooks_for_study = Generated casebooks for
+#generated_casebooks_for_study = Сгенерированный отчеты субъектов в
+generated_casebooks_for_study = \u0421\u0433\u0435\u043d\u0435\u0440\u0438\u0440\u043e\u0432\u0430\u043d\u043d\u044b\u0439 \u043e\u0442\u0447\u0435\u0442\u044b \u0441\u0443\u0431\u044a\u0435\u043a\u0442\u043e\u0432 \u0432
+#selected_casebooks_in_progress = Selected casebooks in progress.
+#selected_casebooks_in_progress = Выбранные отчеты в процессе создания.
+selected_casebooks_in_progress = \u0412\u044b\u0431\u0440\u0430\u043d\u043d\u044b\u0435 \u043e\u0442\u0447\u0435\u0442\u044b \u0432 \u043f\u0440\u043e\u0446\u0435\u0441\u0441\u0435 \u0441\u043e\u0437\u0434\u0430\u043d\u0438\u044f\u002e
