Fixes #2378: Study-level site enrollment widget for site monitors. Submitted by denis
git-svn-id: https://svn.clinovo.com/clincapture/trunk@2832 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
@@ -3311,6 +3311,7 @@ enrollment_progress_widget_header = Enrollment Progress
 coding_progress_widget_header = Coding Progress
 enrollment_status_ps_widget_header = Enrollment Status Per Site
 evaluation_progress_widget_header = CRFs Evaluation Progress
+enrollment_status_pas_widget_header = Enrollment Status per Available Sites
 
 # widgets description
 sdv_widget_description = SDV Progress.
