Fixes #1798: Event API: AddCRF_Event. Submitted by sergey
git-svn-id: https://svn.clinovo.com/clincapture/trunk@2833 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/exceptions_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/exceptions_en.properties
@@ -469,21 +469,48 @@ rest.createUser.roleDoesNotExist=Role with id "{0}" does not exist.
 rest.createUser.studyDoesNotExist=Study with id "{0}" does not exist.
 rest.createUser.itsForbiddenToAssignSiteLevelRoleToStudy=It's forbidden to assign a site level role to a study.
 rest.createUser.itsForbiddenToAssignStudyLevelRoleToSite=It's forbidden to assign a study level role to a site.
-rest.createUser.authorisedUserIsNotAssignedToStudy=Authorised user is not assigned to study "{0}"
-rest.authentication.emptyUsername=Username parameter is empty
-rest.authentication.emptyPassword=Password parameter is empty
-rest.authentication.emptyStudyName=Studyname parameter is empty
-rest.authentication.missingUsername=Username parameter is missing
-rest.authentication.missingPassword=Password parameter is missing
-rest.authentication.missingStudyName=Studyname parameter is missing
 rest.authentication.http404=Service unavailable
+rest.userservice.createuser.missing.username=Username parameter is missing
+rest.userservice.createuser.empty.username=Username parameter is empty
+rest.userservice.createuser.missing.firstname=Firstname parameter is missing
+rest.userservice.createuser.empty.firstname=Firstname parameter is empty
+rest.userservice.createuser.missing.lastname=Lastname parameter is missing
+rest.userservice.createuser.empty.lastname=Lastname parameter is empty
+rest.userservice.createuser.missing.email=Email parameter is missing
+rest.userservice.createuser.empty.email=Email parameter is empty
+rest.userservice.createuser.missing.phone=Phone parameter is missing
+rest.userservice.createuser.empty.phone=Phone parameter is empty
+rest.userservice.createuser.missing.company=Company parameter is missing
+rest.userservice.createuser.empty.company=Company parameter is empty
+rest.userservice.createuser.missing.usertype=Usertype parameter is missing
+rest.userservice.createuser.empty.usertype=Usertype parameter is empty
+rest.userservice.createuser.missing.allowsoap=Allowsoap parameter is missing
+rest.userservice.createuser.empty.allowsoap=Allowsoap parameter is empty
+rest.userservice.createuser.missing.displaypassword=Displaypassword parameter is missing
+rest.userservice.createuser.empty.displaypassword=Displaypassword parameter is empty
+rest.userservice.createuser.missing.role=Role parameter is missing
+rest.userservice.createuser.empty.role=Role parameter is empty
 rest.studyEventDefinition.wrongType=Wrong type
 rest.wrongScope=It's impossible to execute this method on the current scope.
-rest.studyeventdefinitionservice.createstudyeventdefinition.missing.name=Name parameter is missing
-rest.studyeventdefinitionservice.createstudyeventdefinition.missing.type=Type parameter is missing
-rest.studyeventdefinitionservice.createstudyeventdefinition.empty.name=Name parameter is empty
-rest.studyeventdefinitionservice.createstudyeventdefinition.empty.type=Type parameter is empty
+rest.eventservice.createevent.missing.name=Name parameter is missing
+rest.eventservice.createevent.missing.type=Type parameter is missing
+rest.eventservice.createevent.empty.name=Name parameter is empty
+rest.eventservice.createevent.empty.type=Type parameter is empty
 rest.wrongParameterType=Parameter ''{0}'' should be {1}
+rest.possibleValuesAre=The possible values for parameter ''{0}'' are the ''{1}''
+rest.possibleValuesWithDescriptionsAre=The possible values for parameter ''{0}'' are the ''{1}'' where the ''{2}''
+rest.event.addCrf.crfIsNotFound=Crf is not found with name ''{0}'' and version ''{1}''
+rest.event.isNotFound=Study Event Definition with id ''{0}'' is not found
+rest.event.doesNotBelongToCurrentStudy=Study Event Definition with id ''{0}'' does not belong to current study ''{1}''
+rest.event.eventDefinitionCrfAlreadyExists=Event Definition Crf for Crf with id ''{0}'' already exists in study event definition with id ''{1}''
+rest.event.crfHasSDVRequiredItems=Crf with id ''{0}'' has SDV required items and therefore the SourceDataVerification should be specified as 2 -> Specific Items
+rest.event.emailAddressIsNotValid=Email address is not valid.
+rest.eventservice.addcrf.empty.defaultversion=DefaultVersion parameter is empty
+rest.eventservice.addcrf.missing.defaultversion=DefaultVersion parameter is missing
+rest.eventservice.addcrf.empty.crfname=CrfName parameter is empty
+rest.eventservice.addcrf.missing.crfname=CrfName parameter is missing
+rest.eventservice.addcrf.empty.eventid=EventId parameter is empty
+rest.eventservice.addcrf.missing.eventid=EventId parameter is missing
 
 there_was_an_unspecified_error = There was an unspecified error with your creation, please contact an administrator.
 not_found_in_the_db = Not found in the db
