Fixes #2341: Save subject casebook in the print folder when it is created. Submitted by vitaly
git-svn-id: https://svn.clinovo.com/clincapture/trunk@2834 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
@@ -4052,5 +4052,7 @@ print_site_casebooks = Print Site Casebooks
 time_zone = Time zone
 casebooks = Casebooks
 generate_casebooks = Generate Casebooks
+download_casebooks = Download Casebooks
 generated_casebooks_for_study = Generated casebooks for
-selected_casebooks_in_progress = Selected casebooks in progress.
+selected_casebooks_in_progress = Selected casebooks in progress
+site_level_casebooks_in_progress = Selected casebooks in progress. Please visit 'Casebook' page for details.
