--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_ru.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_ru.properties
@@ -7730,3 +7730,9 @@ generated_casebooks_for_study = \u0421\u0433\u0435\u043d\u0435\u0440\u0438\u0440
 #selected_casebooks_in_progress = Selected casebooks in progress.
 #selected_casebooks_in_progress = Выбранные отчеты в процессе создания.
 selected_casebooks_in_progress = \u0412\u044b\u0431\u0440\u0430\u043d\u043d\u044b\u0435 \u043e\u0442\u0447\u0435\u0442\u044b \u0432 \u043f\u0440\u043e\u0446\u0435\u0441\u0441\u0435 \u0441\u043e\u0437\u0434\u0430\u043d\u0438\u044f\u002e
+#site_level_casebooks_in_progress = Selected casebooks in progress. Please visit 'Casebook' page for details.
+#site_level_casebooks_in_progress = Отчеты субъектов в процессе. Посетите страницу 'Отчеты ИРК' для подробностей.
+site_level_casebooks_in_progress = \u041e\u0442\u0447\u0435\u0442\u044b \u0441\u0443\u0431\u044a\u0435\u043a\u0442\u043e\u0432 \u0432 \u043f\u0440\u043e\u0446\u0435\u0441\u0441\u0435\u002e \u041f\u043e\u0441\u0435\u0442\u0438\u0442\u0435 \u0441\u0442\u0440\u0430\u043d\u0438\u0446\u0443 \u0027\u041e\u0442\u0447\u0435\u0442\u044b \u0418\u0420\u041a\u0027 \u0434\u043b\u044f \u043f\u043e\u0434\u0440\u043e\u0431\u043d\u043e\u0441\u0442\u0435\u0439\u002e
+#download_casebooks = Download Casebooks
+#download_casebooks = Скачать отчеты
+download_casebooks = \u0421\u043a\u0430\u0447\u0430\u0442\u044c \u043e\u0442\u0447\u0435\u0442\u044b
