Fixes #2316: Update "Date Started" and "Date Ended" filters on the "View All Events in Study" page. Submitted by aram
git-svn-id: https://svn.clinovo.com/clincapture/trunk@2835 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/format_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/format_en.properties
@@ -67,7 +67,7 @@ date_time_format = DD-MMM-YYYY HH:MM
 # field, to instruct the user which format to submit date/time fields.
 # Years may not be 2 digits in the application.
 #########################################
-date_time_format_short = dd-MMM-yyyy HH:MM
+date_time_format_short = dd-MMM-yyyy HH:mm
 
 #########################################
 # date_time_format_string
