--- a/core/src/main/resources/org/akaza/openclinica/i18n/format_ru.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/format_ru.properties
@@ -67,7 +67,7 @@ date_time_format = DD-MMM-YYYY HH:MM
 # field, to instruct the user which format to submit date/time fields.
 # Years may not be 2 digits in the application.
 #########################################
-date_time_format_short = dd-MMM-yyyy HH:MM
+date_time_format_short = dd-MMM-yyyy HH:mm
 
 #########################################
 # date_time_format_string
