Fixes #2001: remove hardcoded english from extract job email. Submitted by denis
git-svn-id: https://svn.clinovo.com/clincapture/trunk@2850 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
@@ -4056,3 +4056,6 @@ download_casebooks = Download Casebooks
 generated_casebooks_for_study = Generated casebooks for
 selected_casebooks_in_progress = Selected casebooks in progress
 site_level_casebooks_in_progress = Selected casebooks in progress. Please visit 'Casebook' page for details.
+
+extract.success = Your extract job completed successfully. The file is available for download
+job_execution = Job Execution
