--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_ru.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_ru.properties
@@ -7736,3 +7736,11 @@ site_level_casebooks_in_progress = \u041e\u0442\u0447\u0435\u0442\u044b \u0441\u
 #download_casebooks = Download Casebooks
 #download_casebooks = Скачать отчеты
 download_casebooks = \u0421\u043a\u0430\u0447\u0430\u0442\u044c \u043e\u0442\u0447\u0435\u0442\u044b
+
+#extract.success = Your extract job completed successfully. The file is available for download
+#extract.success = Ваша задача по извлечению данных была завершена успешно. Файл доступен для скачивания по ссылке
+extract.success = \u0412\u0430\u0448\u0430 \u0437\u0430\u0434\u0430\u0447\u0430 \u043f\u043e \u0438\u0437\u0432\u043b\u0435\u0447\u0435\u043d\u0438\u044e \u0434\u0430\u043d\u043d\u044b\u0445 \u0431\u044b\u043b\u0430 \u0437\u0430\u0432\u0435\u0440\u0448\u0435\u043d\u0430 \u0443\u0441\u043f\u0435\u0448\u043d\u043e\u002e \u0424\u0430\u0439\u043b \u0434\u043e\u0441\u0442\u0443\u043f\u0435\u043d \u0434\u043b\u044f \u0441\u043a\u0430\u0447\u0438\u0432\u0430\u043d\u0438\u044f \u043f\u043e \u0441\u0441\u044b\u043b\u043a\u0435
+
+#job_execution = Job Execution
+#job_execution = Задачи по извлечению данных
+job_execution = \u0417\u0430\u0434\u0430\u0447\u0438 \u043f\u043e \u0438\u0437\u0432\u043b\u0435\u0447\u0435\u043d\u0438\u044e \u0434\u0430\u043d\u043d\u044b\u0445
