Fixes #2408: Update information in the Remove/Restore emails. Submitted by denis
git-svn-id: https://svn.clinovo.com/clincapture/trunk@2851 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/page_messages_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/page_messages_en.properties
@@ -650,7 +650,7 @@ regular_expression_contained = Regular expression contained
 
 remove_SED = Remove Study Event Definition
 
-remove_event_CRF_from_event = Remove Event CRF from Event\u0009
+remove_event_CRF_from_event = Remove Event CRF from Event.
 
 remove_event_from_study = Remove Event from Study\u0009
 
@@ -687,7 +687,7 @@ restore_event_crf_failed_crf_is_not_available = Restore on an Event CRF cannot b
 
 restore_event_crf_failed_crf_version_is_not_available = Restore on an Event CRF cannot be performed on a CRF version that is not available.
 
-restore_event_CRF_to_event = Restore Event CRF to Event
+restore_event_CRF_to_event = Restore Event CRF to Event.
 
 restore_event_to_study = Restore Event to Study
 
