--- a/core/src/main/resources/org/akaza/openclinica/i18n/page_messages_zh.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/page_messages_zh.properties
@@ -970,9 +970,9 @@ regular_expression_contained  = \u5305\u542b\u4e00\u822c\u8868\u8fbe\u5f0f
 #remove_SED  =  Remove Study Event Definition
 #remove_SED  = 删除研究事件定义
 remove_SED  = \u5220\u9664\u7814\u7a76\u4e8b\u4ef6\u5b9a\u4e49
-#remove_event_CRF_from_event  =  Remove Event CRF from Event\u0009
-#remove_event_CRF_from_event  = 从事件\u0009 中删除事件CRF
-remove_event_CRF_from_event  = \u4ece\u4e8b\u4ef6\\u0009 \u4e2d\u5220\u9664\u4e8b\u4ef6\u0043\u0052\u0046
+#remove_event_CRF_from_event  =  Remove Event CRF from Event.
+#remove_event_CRF_from_event  = 从事件\u0009 中删除事件CRF.
+remove_event_CRF_from_event  = \u4ece\u4e8b\u4ef6\\u0009 \u4e2d\u5220\u9664\u4e8b\u4ef6\u0043\u0052\u0046.
 #remove_event_from_study  =  Remove Event from Study\u0009
 #remove_event_from_study  = 从研究\u0009 中删除事件
 remove_event_from_study  = \u4ece\u7814\u7a76\\u0009 \u4e2d\u5220\u9664\u4e8b\u4ef6
@@ -1017,7 +1017,7 @@ restore_event_crf_failed_crf_is_not_available  = \u0043\u0052\u0046\u4e0d\u53ef\
 restore_event_crf_failed_crf_version_is_not_available  = \u5bf9\u4e0d\u53ef\u7528\u7684\u0043\u0052\u0046\u7248\u672c\uff0c\u4e0d\u80fd\u6267\u884c\u8fd8\u539f\u4e8b\u4ef6\u0043\u0052\u0046\u3002
 #restore_event_CRF_to_event  =  Restore Event CRF to Event
 #restore_event_CRF_to_event  = 将事件CRF恢复到事件
-restore_event_CRF_to_event  = \u5c06\u4e8b\u4ef6\u0043\u0052\u0046\u6062\u590d\u5230\u4e8b\u4ef6
+restore_event_CRF_to_event  = \u5c06\u4e8b\u4ef6\u0043\u0052\u0046\u6062\u590d\u5230\u4e8b\u4ef6.
 #restore_event_to_study  =  Restore Event to Study
 #restore_event_to_study  = 将事件还原到研究
 restore_event_to_study  = \u5c06\u4e8b\u4ef6\u8fd8\u539f\u5230\u7814\u7a76
