--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
@@ -4057,5 +4057,8 @@ generated_casebooks_for_study = Generated casebooks for
 selected_casebooks_in_progress = Selected casebooks in progress
 site_level_casebooks_in_progress = Selected casebooks in progress. Please visit 'Casebook' page for details.
 
+mail.removed_by = CRF was removed by
+mail.restored_by = CRF was restored by
+
 extract.success = Your extract job completed successfully. The file is available for download
 job_execution = Job Execution
