--- a/core/src/main/resources/org/akaza/openclinica/i18n/page_messages_ru.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/page_messages_ru.properties
@@ -970,9 +970,9 @@ regular_expression_contained  = \u0420\u0435\u0433\u0443\u043b\u044f\u0440\u043d
 #remove_SED  =  Remove Study Event Definition
 #remove_SED  = Удалить определение события
 remove_SED  = \u0423\u0434\u0430\u043b\u0438\u0442\u044c \u043e\u043f\u0440\u0435\u0434\u0435\u043b\u0435\u043d\u0438\u0435 \u0441\u043e\u0431\u044b\u0442\u0438\u044f
-#remove_event_CRF_from_event  =  Remove Event CRF from Event\u0009
-#remove_event_CRF_from_event  = Удалить ИРК из события \u0009
-remove_event_CRF_from_event  = \u0423\u0434\u0430\u043b\u0438\u0442\u044c \u0418\u0420\u041a \u0438\u0437 \u0441\u043e\u0431\u044b\u0442\u0438\u044f \u0009
+#remove_event_CRF_from_event  =  Remove Event CRF from Event.
+#remove_event_CRF_from_event  = Удалить ИРК из события.
+remove_event_CRF_from_event  = \u0423\u0434\u0430\u043b\u0438\u0442\u044c \u0418\u0420\u041a \u0438\u0437 \u0441\u043e\u0431\u044b\u0442\u0438\u044f.
 #remove_event_from_study  =  Remove Event from Study\u0009
 #remove_event_from_study  = Удалить событие из исследования \u0009
 remove_event_from_study  = \u0423\u0434\u0430\u043b\u0438\u0442\u044c \u0441\u043e\u0431\u044b\u0442\u0438\u0435 \u0438\u0437 \u0438\u0441\u0441\u043b\u0435\u0434\u043e\u0432\u0430\u043d\u0438\u044f \u0009
@@ -1026,7 +1026,7 @@ restore_event_crf_failed_crf_is_not_available  = \u0412\u043e\u0441\u0441\u0442\
 restore_event_crf_failed_crf_version_is_not_available  = \u0412\u043e\u0441\u0441\u0442\u0430\u043d\u043e\u0432\u043b\u0435\u043d\u0438\u0435 \u0418\u0420\u041a \u0441\u043e\u0431\u044b\u0442\u0438\u044f \u043d\u0435\u0432\u043e\u0437\u043c\u043e\u0436\u043d\u043e\u002c \u0435\u0441\u043b\u0438 \u0441\u043e\u043e\u0442\u0432\u0435\u0442\u0441\u0442\u0432\u0443\u044e\u0449\u0430\u044f \u0432\u0435\u0440\u0441\u0438\u044f \u0418\u0420\u041a \u043d\u0435\u0434\u043e\u0441\u0442\u0443\u043f\u043d\u0430\u002e
 #restore_event_CRF_to_event  =  Restore Event CRF to Event
 #restore_event_CRF_to_event  = Восстановить ИРК в событии
-restore_event_CRF_to_event  = \u0412\u043e\u0441\u0441\u0442\u0430\u043d\u043e\u0432\u0438\u0442\u044c \u0418\u0420\u041a \u0432 \u0441\u043e\u0431\u044b\u0442\u0438\u0438
+restore_event_CRF_to_event  = \u0412\u043e\u0441\u0441\u0442\u0430\u043d\u043e\u0432\u0438\u0442\u044c \u0418\u0420\u041a \u0432 \u0441\u043e\u0431\u044b\u0442\u0438\u0438.
 #restore_event_to_study  =  Restore Event to Study
 #restore_event_to_study  = Восстановить событие в исследовании
 restore_event_to_study  = \u0412\u043e\u0441\u0441\u0442\u0430\u043d\u043e\u0432\u0438\u0442\u044c \u0441\u043e\u0431\u044b\u0442\u0438\u0435 \u0432 \u0438\u0441\u0441\u043b\u0435\u0434\u043e\u0432\u0430\u043d\u0438\u0438
