Fixes #1797: Event API - Query_Event. Submitted by sergey
git-svn-id: https://svn.clinovo.com/clincapture/trunk@2852 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/exceptions_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/exceptions_en.properties
@@ -511,6 +511,7 @@ rest.eventservice.addcrf.empty.crfname=CrfName parameter is empty
 rest.eventservice.addcrf.missing.crfname=CrfName parameter is missing
 rest.eventservice.addcrf.empty.eventid=EventId parameter is empty
 rest.eventservice.addcrf.missing.eventid=EventId parameter is missing
+rest.createEvent.operationFailed=Failed to create Study Event Definition
 
 there_was_an_unspecified_error = There was an unspecified error with your creation, please contact an administrator.
 not_found_in_the_db = Not found in the db
