Refs #2364: Schedule Event page Rework Submitted by: vitaliy
git-svn-id: https://svn.clinovo.com/clincapture/trunk@2861 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
@@ -4062,3 +4062,4 @@ mail.restored_by = CRF was restored by
 
 extract.success = Your extract job completed successfully. The file is available for download
 job_execution = Job Execution
+schedule_study_event = Schedule Study Event
