--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_ru.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_ru.properties
@@ -7751,3 +7751,6 @@ extract.success = \u0412\u0430\u0448\u0430 \u0437\u0430\u0434\u0430\u0447\u0430 
 #job_execution = Job Execution
 #job_execution = Задачи по извлечению данных
 job_execution = \u0417\u0430\u0434\u0430\u0447\u0438 \u043f\u043e \u0438\u0437\u0432\u043b\u0435\u0447\u0435\u043d\u0438\u044e \u0434\u0430\u043d\u043d\u044b\u0445
+#schedule_study_event =  Schedule Study Event
+#schedule_study_event = Запланировать событие исследования
+schedule_study_event = \u0417\u0430\u043f\u043b\u0430\u043d\u0438\u0440\u043e\u0432\u0430\u0442\u044c \u0441\u043e\u0431\u044b\u0442\u0438\u0435 \u0438\u0441\u0441\u043b\u0435\u0434\u043e\u0432\u0430\u043d\u0438\u044f
