Fixes #2262: In the extended view mode of the insert-rule, insert value does not display. Submitted by Denis
git-svn-id: https://svn.clinovo.com/clincapture/trunk@2864 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
@@ -3107,6 +3107,7 @@ ADE_comma = AdministrativeDataEntry,
 import_comma = ImportDataEntry,
 batch_comma = Batch,
 dest_prop_colon = DestinationProperty:
+insert_values_colon = Insert Values:
 
 secondaryIDRequired = Collect Secondary ID?
 dateOfEnrollmentForStudyRequired = Collect Date of Enrollment for Study?
