--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_ru.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_ru.properties
@@ -5193,6 +5193,9 @@ batch_comma =  Batch,
 #dest_prop_colon =  DestinationProperty:
 #dest_prop_colon =  DestinationProperty:
 dest_prop_colon =  DestinationProperty:
+#insert_values_colon = Insert Values:
+#insert_values_colon = Вставляемые Значения:
+insert_values_colon = \u0412\u0441\u0442\u0430\u0432\u043b\u044f\u0435\u043c\u044b\u0435 \u0417\u043d\u0430\u0447\u0435\u043d\u0438\u044f:
 #secondaryIDRequired =  Collect Secondary ID?
 #secondaryIDRequired = Собирать вторичный ID?
 secondaryIDRequired = \u0421\u043e\u0431\u0438\u0440\u0430\u0442\u044c \u0432\u0442\u043e\u0440\u0438\u0447\u043d\u044b\u0439 \u0049\u0044\u003f
