Refs #1566: Rework the Support page Submitted by: vincent
git-svn-id: https://svn.clinovo.com/clincapture/trunk@2870 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/notes_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/notes_en.properties
@@ -263,7 +263,7 @@ extract_dataset_side_info2 = Data are available in multiple formats - browsable 
 
 extract_dataset_side_info3 = Listed below are the five most recently created Datasets.  Click 'View All' to see all the datasets for this study.  The icons next to each dataset allow you to view information about the dataset, edit its properties, delete it, and download new or archived versions of the data.
 
-fill_out_form_to_contact = Please fill out the following form to contact your Administrator with questions about ClinCapture. This form will be sent internally within your organization.
+fill_out_form_to_contact = Please fill out the following form to contact your Administrator with questions about ClinCapture.
 
 fill_out_form_to_request_study = The information in the form below will be sent to your ClinCapture Administrator. The Administrator will be the decision maker on whether or not you are allowed access to a particular study or site. Please contact your ClinCapture Administrator with any questions.
 
