Fixed #2324: Localize run date-time for export jobs Submitted by: aram
git-svn-id: https://svn.clinovo.com/clincapture/trunk@2878 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
@@ -2901,6 +2901,7 @@ sdv_sdv_for = Source Data Verification for
 update_scheduled_job = Update Export Job
 import_data=Import Data
 note_that_job_is_set=Note that the job is set to run on the server time.  The current server time is
+job_is_set_to_run_on_local_time = Note that the job is set to run on your local time. Your local time is
 import_job_name=Import Job Name
 import_job_desc=Import Job Description
 import_job_study=Import Job Study
