--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_ru.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_ru.properties
@@ -4635,6 +4635,9 @@ import_data = \u0418\u043c\u043f\u043e\u0440\u0442 \u0434\u0430\u043d\u043d\u044
 #note_that_job_is_set = Note that the job is set to run on the server time.  The current server time is
 #note_that_job_is_set = Обратите внимание, что задания будут выполнены по серверному времени. Серверное время  сейчас:
 note_that_job_is_set = \u041e\u0431\u0440\u0430\u0442\u0438\u0442\u0435 \u0432\u043d\u0438\u043c\u0430\u043d\u0438\u0435\u002c \u0447\u0442\u043e \u0437\u0430\u0434\u0430\u043d\u0438\u044f \u0431\u0443\u0434\u0443\u0442 \u0432\u044b\u043f\u043e\u043b\u043d\u0435\u043d\u044b \u043f\u043e \u0441\u0435\u0440\u0432\u0435\u0440\u043d\u043e\u043c\u0443 \u0432\u0440\u0435\u043c\u0435\u043d\u0438\u002e \u0421\u0435\u0440\u0432\u0435\u0440\u043d\u043e\u0435 \u0432\u0440\u0435\u043c\u044f  \u0441\u0435\u0439\u0447\u0430\u0441\u003a
+#job_is_set_to_run_on_local_time = Note that the job is set to run on your local time. Your local time is
+#job_is_set_to_run_on_local_time = Обратите внимание, что задания запускаются по вашему локальному времени. Ваше локальное время:
+job_is_set_to_run_on_local_time = \u041e\u0431\u0440\u0430\u0442\u0438\u0442\u0435 \u0432\u043d\u0438\u043c\u0430\u043d\u0438\u0435\u002c \u0447\u0442\u043e \u0437\u0430\u0434\u0430\u043d\u0438\u044f \u0437\u0430\u043f\u0443\u0441\u043a\u0430\u044e\u0442\u0441\u044f \u043f\u043e \u0432\u0430\u0448\u0435\u043c\u0443 \u043b\u043e\u043a\u0430\u043b\u044c\u043d\u043e\u043c\u0443 \u0432\u0440\u0435\u043c\u0435\u043d\u0438\u002e \u0412\u0430\u0448\u0435 \u043b\u043e\u043a\u0430\u043b\u044c\u043d\u043e\u0435 \u0432\u0440\u0435\u043c\u044f\u003a
 #import_job_name = Import Job Name
 #import_job_name = Импортировать название задания
 import_job_name = \u0418\u043c\u043f\u043e\u0440\u0442\u0438\u0440\u043e\u0432\u0430\u0442\u044c \u043d\u0430\u0437\u0432\u0430\u043d\u0438\u0435 \u0437\u0430\u0434\u0430\u043d\u0438\u044f
