--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_ru.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_ru.properties
@@ -5592,9 +5592,17 @@ is_site_visible = \u0412\u0438\u0434\u043d\u043e \u0432 \u0446\u0435\u043d\u0442
 #reminder_for_event_and_subject =  Reminder for {0} event (Subject #{1})
 #reminder_for_event_and_subject = Напоминание для события {0}  (субъект #{1})
 reminder_for_event_and_subject = \u041d\u0430\u043f\u043e\u043c\u0438\u043d\u0430\u043d\u0438\u0435 \u0434\u043b\u044f \u0441\u043e\u0431\u044b\u0442\u0438\u044f{0}  (\u0441\u0443\u0431\u044a\u0435\u043a\u0442 #{1})
-#day_email_message_htm =  Dear {0},<br><br>This is a reminder to complete the Calendared Visit {1} for Subject {2} in the study {3} {4}.<br><br>Best,<br><br>System Administrator for {5}.
-#day_email_message_htm = Уважаемый исследователь, это напоминание о том, что вы должны пригласить пациента № {2} на визит {1} в исследовании {3} {4}.<br><br>С уважением,<br><br>Системный Администратор, {5}.
-day_email_message_htm = \u0423\u0432\u0430\u0436\u0430\u0435\u043c\u044b\u0439 \u0438\u0441\u0441\u043b\u0435\u0434\u043e\u0432\u0430\u0442\u0435\u043b\u044c\u002c \u044d\u0442\u043e \u043d\u0430\u043f\u043e\u043c\u0438\u043d\u0430\u043d\u0438\u0435 \u043e \u0442\u043e\u043c\u002c \u0447\u0442\u043e \u0432\u044b \u0434\u043e\u043b\u0436\u043d\u044b \u043f\u0440\u0438\u0433\u043b\u0430\u0441\u0438\u0442\u044c \u043f\u0430\u0446\u0438\u0435\u043d\u0442\u0430 \u2116 {2} \u043d\u0430 \u0432\u0438\u0437\u0438\u0442 {1}  \u0432 \u0438\u0441\u0441\u043b\u0435\u0434\u043e\u0432\u0430\u043d\u0438\u0438 {3} {4}.<br><br>\u0421 \u0443\u0432\u0430\u0436\u0435\u043d\u0438\u0435\u043c,<br><br>\u0421\u0438\u0441\u0442\u0435\u043c\u043d\u044b\u0439 \u0410\u0434\u043c\u0438\u043d\u0438\u0441\u0442\u0440\u0430\u0442\u043e\u0440, {5}.
+
+#email.calendar_reminder = This is a reminder to complete the Calendared Visit
+#email.calendar_reminder = Это напоминание пройти Запланированный Визит
+email.calendar_reminder = \u042d\u0442\u043e \u043d\u0430\u043f\u043e\u043c\u0438\u043d\u0430\u043d\u0438\u0435 \u043f\u0440\u043e\u0439\u0442\u0438 \u0417\u0430\u043f\u043b\u0430\u043d\u0438\u0440\u043e\u0432\u0430\u043d\u043d\u044b\u0439 \u0412\u0438\u0437\u0438\u0442
+#email.days_to_complete_visit = Days to complete Visit
+#email.days_to_complete_visit = Дней для завершения визита
+email.days_to_complete_visit = \u0414\u043d\u0435\u0439 \u0434\u043b\u044f \u0437\u0430\u0432\u0435\u0440\u0448\u0435\u043d\u0438\u044f \u0432\u0438\u0437\u0438\u0442\u0430
+#email.best_system_administrator_for = <br>Best,<br>System Administrator for
+#email.best_system_administrator_for = <br>С уважением,<br><br>Системный Администратор,
+email.best_system_administrator_for = \u003c\u0062\u0072\u003e\u0421 \u0443\u0432\u0430\u0436\u0435\u043d\u0438\u0435\u043c\u002c\u003c\u0062\u0072\u003e\u003c\u0062\u0072\u003e\u0421\u0438\u0441\u0442\u0435\u043c\u043d\u044b\u0439 \u0410\u0434\u043c\u0438\u043d\u0438\u0441\u0442\u0440\u0430\u0442\u043e\u0440\u002c
+
 #view_calendared_parameters =  View calendared parameters for subject
 #view_calendared_parameters = Просмотр календарных параметров для пациента.
 view_calendared_parameters = \u041f\u0440\u043e\u0441\u043c\u043e\u0442\u0440 \u043a\u0430\u043b\u0435\u043d\u0434\u0430\u0440\u043d\u044b\u0445 \u043f\u0430\u0440\u0430\u043c\u0435\u0442\u0440\u043e\u0432 \u0434\u043b\u044f \u043f\u0430\u0446\u0438\u0435\u043d\u0442\u0430\u002e
