Fixes #1794: Event API: Edit_Event. Submitted by sergey
git-svn-id: https://svn.clinovo.com/clincapture/trunk@2880 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/exceptions_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/exceptions_en.properties
@@ -450,6 +450,7 @@ specify_valid_trial_id = Specify a valid Trial Id to proceed.
 randomization_can_be_performer_only_at_site = Randomization can only be performed on a site.
 no_permission_to_evaluate=No permission to open crf evaluation page
 
+rest.atLeastOneNotRequiredParameterShouldBeSpecified=At least one not required parameter should be specified
 rest.authentication.onlyTheHttpsIsSupported=Only https communication is supported
 rest.authentication.userShouldBeAuthenticated=User should be authenticated
 rest.authentication.userIsNotAssignedToStudy=User is not assigned to study
@@ -491,6 +492,18 @@ rest.userservice.createuser.empty.displaypassword=Displaypassword parameter is e
 rest.userservice.createuser.missing.role=Role parameter is missing
 rest.userservice.createuser.empty.role=Role parameter is empty
 rest.studyEventDefinition.wrongType=Wrong type
+rest.studyEventDefinition.calendaredVisitCanNotBeRepeating=Calendared Event cannot be repeating
+rest.studyEventDefinition.onlyCalendaredEventsCanBeReferenced=Only Calendared Events can be referenced
+rest.studyEventDefinition.dayMaxIsNotUsedForReferenceEvent=Day Max is not used for Reference Event
+rest.studyEventDefinition.dayMinIsNotUsedForReferenceEvent=Day Min is not used for Reference Event
+rest.studyEventDefinition.dayScheduleIsNotUsedForReferenceEvent=Day Schedule is not used for Reference Event
+rest.studyEventDefinition.dayEmailIsNotUsedForReferenceEvent=Day Email is not used for Reference Event
+rest.studyEventDefinition.userNameIsNotUsedForReferenceEvent=User Name is not used for Reference Event
+rest.studyEventDefinition.dayMaxIsUsedForCalendaredEventsOnly=Day Max is used for Calendared Events only
+rest.studyEventDefinition.dayMinIsUsedForCalendaredEventsOnly=Day Min is used for Calendared Events only
+rest.studyEventDefinition.dayScheduleIsUsedForCalendaredEventsOnly=Day Schedule is used for Calendared Events only
+rest.studyEventDefinition.dayEmailIsUsedForCalendaredEventsOnly=Day Email is used for Calendared Events only
+rest.studyEventDefinition.userNameIsUsedForCalendaredEventsOnly=User Name is used for Calendared Events only
 rest.wrongScope=It's impossible to execute this method on the current scope.
 rest.eventservice.createevent.missing.name=Name parameter is missing
 rest.eventservice.createevent.missing.type=Type parameter is missing
@@ -501,7 +514,7 @@ rest.possibleValuesAre=The possible values for parameter ''{0}'' are the ''{1}''
 rest.possibleValuesWithDescriptionsAre=The possible values for parameter ''{0}'' are the ''{1}'' where the ''{2}''
 rest.event.addCrf.crfIsNotFound=Crf is not found with name ''{0}'' and version ''{1}''
 rest.event.isNotFound=Study Event Definition with id ''{0}'' is not found
-rest.event.doesNotBelongToCurrentStudy=Study Event Definition with id ''{0}'' does not belong to current study ''{1}''
+rest.event.studyEventDefinitionDoesNotBelongToCurrentScope=Study Event Definition with id ''{0}'' does not belong to current scope
 rest.event.eventDefinitionCrfAlreadyExists=Event Definition Crf for Crf with id ''{0}'' already exists in study event definition with id ''{1}''
 rest.event.crfHasSDVRequiredItems=Crf with id ''{0}'' has SDV required items and therefore the SourceDataVerification should be specified as 2 -> Specific Items
 rest.event.emailAddressIsNotValid=Email address is not valid.
@@ -512,6 +525,8 @@ rest.eventservice.addcrf.missing.crfname=CrfName parameter is missing
 rest.eventservice.addcrf.empty.eventid=EventId parameter is empty
 rest.eventservice.addcrf.missing.eventid=EventId parameter is missing
 rest.createEvent.operationFailed=Failed to create Study Event Definition
+rest.eventservice.editevent.empty.id=Id parameter is empty
+rest.eventservice.editevent.missing.id=Id parameter is missing
 
 there_was_an_unspecified_error = There was an unspecified error with your creation, please contact an administrator.
 not_found_in_the_db = Not found in the db
