Fixes #2280: Email notification when all casebooks are generated. Submitted by denis
git-svn-id: https://svn.clinovo.com/clincapture/trunk@2902 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
@@ -4068,4 +4068,9 @@ mail.restored_by = CRF was restored by
 
 extract.success = Your extract job completed successfully. The file is available for download
 job_execution = Job Execution
+
+casebooks_were_generated_for = Casebooks were successfully generated for
+casebooks_download_link = Casebooks are available for download on the following page
+
 schedule_study_event = Schedule Study Event
+_subjects = subjects
