--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_ru.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_ru.properties
@@ -7765,6 +7765,19 @@ extract.success = \u0412\u0430\u0448\u0430 \u0437\u0430\u0434\u0430\u0447\u0430 
 #job_execution = Job Execution
 #job_execution = Задачи по извлечению данных
 job_execution = \u0417\u0430\u0434\u0430\u0447\u0438 \u043f\u043e \u0438\u0437\u0432\u043b\u0435\u0447\u0435\u043d\u0438\u044e \u0434\u0430\u043d\u043d\u044b\u0445
+
+#casebook_was_generated_for = Casebook was successfully generated for
+#casebook_was_generated_for = Отчет был успешно сгенерирован для
+casebook_was_generated_for = \u041e\u0442\u0447\u0435\u0442 \u0431\u044b\u043b \u0443\u0441\u043f\u0435\u0448\u043d\u043e \u0441\u0433\u0435\u043d\u0435\u0440\u0438\u0440\u043e\u0432\u0430\u043d \u0434\u043b\u044f
+
+#_subjects = subject
+#_subjects = субьектов
+_subjects = \u0441\u0443\u0431\u044c\u0435\u043a\u0442\u043e\u0432
+
+#casebook_download_link = Casebook is available for download on the following page
+#casebook_download_link = Отчет доступен для скачивания на следующей странице
+casebook_download_link = \u041e\u0442\u0447\u0435\u0442 \u0434\u043e\u0441\u0442\u0443\u043f\u0435\u043d \u0434\u043b\u044f \u0441\u043a\u0430\u0447\u0438\u0432\u0430\u043d\u0438\u044f \u043d\u0430 \u0441\u043b\u0435\u0434\u0443\u044e\u0449\u0435\u0439 \u0441\u0442\u0440\u0430\u043d\u0438\u0446\u0435
+
 #schedule_study_event =  Schedule Study Event
 #schedule_study_event = Запланировать событие исследования
 schedule_study_event = \u0417\u0430\u043f\u043b\u0430\u043d\u0438\u0440\u043e\u0432\u0430\u0442\u044c \u0441\u043e\u0431\u044b\u0442\u0438\u0435 \u0438\u0441\u0441\u043b\u0435\u0434\u043e\u0432\u0430\u043d\u0438\u044f
