Fixes #1801: Event API for Remove_Event/Restore_Event. Submitted by sergey
git-svn-id: https://svn.clinovo.com/clincapture/trunk@2912 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/exceptions_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/exceptions_en.properties
@@ -450,6 +450,9 @@ specify_valid_trial_id = Specify a valid Trial Id to proceed.
 randomization_can_be_performer_only_at_site = Randomization can only be performed on a site.
 no_permission_to_evaluate=No permission to open crf evaluation page
 
+rest.methodProducesOnlyThe=Method produces only the ''{0}''
+rest.parameterIsNotSupported=Parameter ''{0}'' is not supported
+rest.parameterShouldBeInLowercase=Parameter ''{0}'' should be in lowercase
 rest.atLeastOneNotRequiredParameterShouldBeSpecified=At least one not required parameter should be specified
 rest.authentication.onlyTheHttpsIsSupported=Only https communication is supported
 rest.authentication.userShouldBeAuthenticated=User should be authenticated
@@ -527,6 +530,12 @@ rest.eventservice.addcrf.missing.eventid=EventId parameter is missing
 rest.createEvent.operationFailed=Failed to create Study Event Definition
 rest.eventservice.editevent.empty.id=Id parameter is empty
 rest.eventservice.editevent.missing.id=Id parameter is missing
+rest.eventservice.getInfo.missing.id=Id parameter is missing
+rest.eventservice.getInfo.empty.id=Id parameter is empty
+rest.eventservice.remove.missing.id=Id parameter is missing
+rest.eventservice.remove.empty.id=Id parameter is empty
+rest.eventservice.restore.missing.id=Id parameter is missing
+rest.eventservice.restore.empty.id=Id parameter is empty
 
 there_was_an_unspecified_error = There was an unspecified error with your creation, please contact an administrator.
 not_found_in_the_db = Not found in the db
