Fixes #2455: Unable to create a new Import Job. Submitted by denis
git-svn-id: https://svn.clinovo.com/clincapture/trunk@2919 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
@@ -4074,3 +4074,6 @@ casebooks_download_link = Casebooks are available for download on the following 
 
 schedule_study_event = Schedule Study Event
 _subjects = subjects
+
+job_view_on_another_study = Job was created in a context of another study. If you want to see the Job now, please move to the {0} Study/Site and come back to this page.
+job_note_about_scope = Please note that created Job will be shown only in the scope of study for which it was created.
