Fixes #2462: Incorrect directory url is shown for log file on View Import Job page. Submitted by denis
git-svn-id: https://svn.clinovo.com/clincapture/trunk@2929 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/notes_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/notes_en.properties
@@ -869,3 +869,5 @@ crf_evaluation_instruction=CRF evaluation allows a new user role "Evaluator" to 
 days = days.\n\n\n\n
 application_could_not_generate_the_markup = "The application could not generate the markup for the printable form.<br /> This error may have been caused by the altering of the web page's URL; the URL needs an 'id' or an 'ecId' value in its query string at the URL end.
 failed_validation_check = Failed Validation Check
+
+problem_reading_file = There was a problem while reading Log file, please contact system administrator for more information.
