--- a/core/src/main/resources/org/akaza/openclinica/i18n/notes_ru.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/notes_ru.properties
@@ -1380,3 +1380,7 @@ application_could_not_generate_the_markup = \u041f\u0440\u0438\u043b\u043e\u0436
 #failed_validation_check = Failed Validation Check
 #failed_validation_check = Проверка не была пройдена
 failed_validation_check = \u041f\u0440\u043e\u0432\u0435\u0440\u043a\u0430 \u043d\u0435 \u0431\u044b\u043b\u0430 \u043f\u0440\u043e\u0439\u0434\u0435\u043d\u0430
+
+#problem_reading_file = There was a problem while reading Log file, please contact system administrator for more information.
+#problem_reading_file = Во время чтения файла возникла проблема, свяжитесь с системным администратором для получения дополнительной информации.
+problem_reading_file = \u0412\u043e \u0432\u0440\u0435\u043c\u044f \u0447\u0442\u0435\u043d\u0438\u044f \u0444\u0430\u0439\u043b\u0430 \u0432\u043e\u0437\u043d\u0438\u043a\u043b\u0430 \u043f\u0440\u043e\u0431\u043b\u0435\u043c\u0430\u002c \u0441\u0432\u044f\u0436\u0438\u0442\u0435\u0441\u044c \u0441 \u0441\u0438\u0441\u0442\u0435\u043c\u043d\u044b\u043c \u0430\u0434\u043c\u0438\u043d\u0438\u0441\u0442\u0440\u0430\u0442\u043e\u0440\u043e\u043c \u0434\u043b\u044f \u043f\u043e\u043b\u0443\u0447\u0435\u043d\u0438\u044f \u0434\u043e\u043f\u043e\u043b\u043d\u0438\u0442\u0435\u043b\u044c\u043d\u043e\u0439 \u0438\u043d\u0444\u043e\u0440\u043c\u0430\u0446\u0438\u0438\u002e
