--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
@@ -4055,3 +4055,5 @@ _subjects = subjects
 
 job_view_on_another_study = Job was created in a context of another study. If you want to see the Job now, please move to the {0} Study/Site and come back to this page.
 job_note_about_scope = Please note that created Job will be shown only in the scope of study for which it was created.
+
+view_log = View Log
