--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_ru.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_ru.properties
@@ -4660,11 +4660,11 @@ file_formats = \u0424\u043e\u0440\u043c\u0430\u0442\u044b \u0444\u0430\u0439\u04
 #administer_all_jobs = Администрировать все задания
 administer_all_jobs = \u0410\u0434\u043c\u0438\u043d\u0438\u0441\u0442\u0440\u0438\u0440\u043e\u0432\u0430\u0442\u044c \u0432\u0441\u0435 \u0437\u0430\u0434\u0430\u043d\u0438\u044f
 #view_all_export_data_jobs = View All Export Data Jobs
-#view_all_export_data_jobs = Просмотр всех заданий по выгрузке данных
-view_all_export_data_jobs = \u041f\u0440\u043e\u0441\u043c\u043e\u0442\u0440 \u0432\u0441\u0435\u0445 \u0437\u0430\u0434\u0430\u043d\u0438\u0439 \u043f\u043e \u0432\u044b\u0433\u0440\u0443\u0437\u043a\u0435 \u0434\u0430\u043d\u043d\u044b\u0445
+#view_all_export_data_jobs = Просмотр Заданий Выгрузки
+view_all_export_data_jobs = \u041f\u0440\u043e\u0441\u043c\u043e\u0442\u0440 \u0417\u0430\u0434\u0430\u043d\u0438\u0439 \u0412\u044b\u0433\u0440\u0443\u0437\u043a\u0438
 #view_all_import_data_jobs = View All Import Data Jobs
-#view_all_import_data_jobs = Просмотр всех заданий по загрузке данных
-view_all_import_data_jobs = \u041f\u0440\u043e\u0441\u043c\u043e\u0442\u0440 \u0432\u0441\u0435\u0445 \u0437\u0430\u0434\u0430\u043d\u0438\u0439 \u043f\u043e \u0437\u0430\u0433\u0440\u0443\u0437\u043a\u0435 \u0434\u0430\u043d\u043d\u044b\u0445
+#view_all_import_data_jobs = Просмотр Заданий Загрузки
+view_all_import_data_jobs = \u041f\u0440\u043e\u0441\u043c\u043e\u0442\u0440 \u0417\u0430\u0434\u0430\u043d\u0438\u0439 \u0417\u0430\u0433\u0440\u0443\u0437\u043a\u0438
 #please_pick_a_dataset_to_export = Please Pick a Dataset to Export
 #please_pick_a_dataset_to_export = Пожалуйста выберите набор данных для выгрузки
 please_pick_a_dataset_to_export = \u041f\u043e\u0436\u0430\u043b\u0443\u0439\u0441\u0442\u0430 \u0432\u044b\u0431\u0435\u0440\u0438\u0442\u0435 \u043d\u0430\u0431\u043e\u0440 \u0434\u0430\u043d\u043d\u044b\u0445 \u0434\u043b\u044f \u0432\u044b\u0433\u0440\u0443\u0437\u043a\u0438
@@ -7759,3 +7759,7 @@ job_view_on_another_study = \u0417\u0430\u0434\u0430\u0447\u0430 \u0431\u044b\u0
 #job_note_about_scope = Please note that created Job will be shown only in the scope of study for which it was created.
 #job_note_about_scope = Пожалуйста обратите внимание что созданная Задача будет видна только в котексте Исследования для которого она была создана.
 job_note_about_scope = \u041f\u043e\u0436\u0430\u043b\u0443\u0439\u0441\u0442\u0430 \u043e\u0431\u0440\u0430\u0442\u0438\u0442\u0435 \u0432\u043d\u0438\u043c\u0430\u043d\u0438\u0435 \u0447\u0442\u043e \u0441\u043e\u0437\u0434\u0430\u043d\u043d\u0430\u044f \u0417\u0430\u0434\u0430\u0447\u0430 \u0431\u0443\u0434\u0435\u0442 \u0432\u0438\u0434\u043d\u0430 \u0442\u043e\u043b\u044c\u043a\u043e \u0432 \u043a\u043e\u043d\u0442\u0435\u043a\u0441\u0442\u0435 \u0418\u0441\u0441\u043b\u0435\u0434\u043e\u0432\u0430\u043d\u0438\u044f \u0434\u043b\u044f \u043a\u043e\u0442\u043e\u0440\u043e\u0433\u043e \u043e\u043d\u0430 \u0431\u044b\u043b\u0430 \u0441\u043e\u0437\u0434\u0430\u043d\u0430\u002e
+
+#view_log = View Log
+#view_log = Просмотр Лога
+view_log = \u041f\u0440\u043e\u0441\u043c\u043e\u0442\u0440 \u041b\u043e\u0433\u0430
