--- a/core/src/main/resources/org/akaza/openclinica/i18n/exceptions_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/exceptions_en.properties
@@ -515,8 +515,10 @@ rest.eventservice.createevent.empty.type=Type parameter is empty
 rest.wrongParameterType=Parameter ''{0}'' should be {1}
 rest.possibleValuesAre=The possible values for parameter ''{0}'' are the ''{1}''
 rest.possibleValuesWithDescriptionsAre=The possible values for parameter ''{0}'' are the ''{1}'' where the ''{2}''
-rest.event.addCrf.crfIsNotFound=Crf is not found with name ''{0}'' and version ''{1}''
+rest.event.addCrf.crfVersionIsNotFound=Crf version is not found with name ''{0}'' and version ''{1}''
+rest.event.addCrf.crfVersionIsNotAvailable=Crf version is not available
 rest.event.isNotFound=Study Event Definition with id ''{0}'' is not found
+rest.event.cannotPerformOperationOnEDCBecauseTheSEDIsNotAvailable=Cannot perform operation on Event Definition Crf because the Study Event Definition is not available
 rest.event.studyEventDefinitionDoesNotBelongToCurrentScope=Study Event Definition with id ''{0}'' does not belong to current scope
 rest.event.eventDefinitionCrfAlreadyExists=Event Definition Crf for Crf with id ''{0}'' already exists in study event definition with id ''{1}''
 rest.event.crfHasSDVRequiredItems=Crf with id ''{0}'' has SDV required items and therefore the SourceDataVerification should be specified as 2 -> Specific Items
@@ -536,6 +538,16 @@ rest.eventservice.remove.missing.id=Id parameter is missing
 rest.eventservice.remove.empty.id=Id parameter is empty
 rest.eventservice.restore.missing.id=Id parameter is missing
 rest.eventservice.restore.empty.id=Id parameter is empty
+rest.event.crfNameIsNotFound=Crf is not found with name ''{0}''
+rest.eventservice.removecrf.missing.eventid=Event Id parameter is missing
+rest.eventservice.removecrf.empty.eventid=Event Id parameter is empty
+rest.eventservice.removecrf.missing.crfname=Crf Name parameter is missing
+rest.eventservice.removecrf.empty.crfname=Crf Name parameter is empty
+rest.eventservice.restorecrf.missing.eventid=Event Id parameter is missing
+rest.eventservice.restorecrf.empty.eventid=Event Id parameter is empty
+rest.eventservice.restorecrf.missing.crfname=Crf Name parameter is missing
+rest.eventservice.restorecrf.empty.crfname=Crf Name parameter is empty
+rest.event.eventDefinitionCrfIsNotFound=Event Definition Crf for Crf ''{0}'' is not found in study event definition ''{1}''
 
 there_was_an_unspecified_error = There was an unspecified error with your creation, please contact an administrator.
 not_found_in_the_db = Not found in the db
